--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -7,36 +7,39 @@
     <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" 
 crossorigin="anonymous">     
-    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/estilo.css">
     <link rel="shortcut icon" href="../img/asd.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar navbar-expand-lg colorFondo">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">SL Frutos Secos</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="#"><img class="tamLogo" src="../logo/Logo.jpeg" alt="Logo SL"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <li class="item"><a href="../index.html">Inicio</a></li>
+                <a class="nav-link active ancla parrafoConHover" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <li class="item"><a href="multimedia.html">Productos</a></li>
+                <a class="nav-link ancla parrafoConHover" href="multimedia.html">Productos</a>
               </li>
               <li class="nav-item">
-                <li class="item"><a href="ubicacion.html">Ubicación</a></li>
+                <a class="nav-link ancla parrafoConHover" href="formulario.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <li class="item"><a href="ofertas.html">Ofertas Especiales</a></li>
+                <a class="nav-link ancla parrafoConHover" href="ubicacion.html">ubicacion</a>
               <li class="nav-item">
-                <li class="item"><a href="http://www.google.com" target="_blank">Google</a></li>
+                <a class="nav-link ancla parrafoConHover" href="ofertas.html">Ofertas Especiales</a>
               </li>
             </ul>
           </div>
         </div>
+      </nav>
       </nav>
       <!--<nav class="contenedorNav">
             <ul class="GridPadre">
@@ -51,7 +54,8 @@ crossorigin="anonymous">
         </nav> -->
     </header>
     <main>
-        <form>
+        <!-- FORMULARIO VIEJO
+          <form>
             <fieldset>
                 <legend>Formulario de Contacto</legend>
                 <label for="nombre">Nombre</label>
@@ -67,14 +71,63 @@ crossorigin="anonymous">
                 <input type="reset">
             </fieldset>
         </form>
-    </main>
+      -->
+
+    
+        <section class="container-fluid">
+          <h1 data-aos="fade-right">Dejanos tu Consulta</h1>
+          <div class="row">
+              <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2">
+                  <form>
+                      <legend>Formulario de Contacto</legend>
+                      <hr>
+                      <div class="mb-3">
+                          <label for="exampleFormControlInput1" class="form-label">Email</label>
+                          <input type="email" class="form-control" id="exampleFormControlInput1">
+                          <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con alguien más. 
+                          </div>
+                      </div>                        
+                      <div class="mb-3">
+                          <label for="exampleInputText" class="form-label">Nombre y Apellido</label>
+                          <input type="Text" class="form-control" id="exampleInputText">
+                      </div>
+                      <div class="mb-3">
+                          <label for="exampleFormControlTextarea1" class="form-label">Escriba su Consulta</label>
+                          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                      </div>
+                      <button type="submit" class="btn btn-primary">Enviar</button>
+                      <button type="reset" class="btn btn-primary">Eliminar</button>   
+                  </form>
+              </div>
+              <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2">
+                  <ol>
+                      <li>WhatsApp</li>
+                      <li>Instagram</li>
+                      <li>Mail</li>
+                      <li><a href="" target="_blank">Web</a>
+                      </li>
+                  </ol>
+              </div>
+          </div>
+      </section>
+
+      </main>
     <footer>
+      <div class="colorFondo">
         <p>Redes sociales</p>
         <p>Teléfono de Contacto</p>
         <p>Email</p>
         <p>todos los derechos <strong>reservados</strong></p>
-     </footer>
+      </div>
+    </footer>
 
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
+     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+     
+     <script>
+       AOS.init();
+     </script>
+  
 </body>
 </html>
