--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -7,37 +7,40 @@
     <title>Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" 
     crossorigin="anonymous">    
-    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/estilo.css">
     <link rel="shortcut icon" href="../img/asd.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">SL Frutos Secos</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <li class="item"><a href="../index.html">Inicio</a></li>
-                  </li>
-                  <li class="nav-item">
-                    <li class="item"><a href="formulario.html">Contacto</a></li>
-                  </li>
-                  <li class="nav-item">
-                    <li class="item"><a href="ofertas.html">Ofertas Especiales</a></li>
-                  </li>
-                  <li class="nav-item">
-                    <li class="item"><a href="http://www.google.com" target="_blank">Google</a></li>
-                    <li class="nav-item">
-                        <li class="item"><a href="http://www.google.com" target="_blank">Google</a></li>    
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+      <nav class="navbar navbar-expand-lg colorFondo">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img class="tamLogo" src="../logo/Logo.jpeg" alt="Logo SL"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active ancla parrafoConHover" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ancla parrafoConHover" href="multimedia.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ancla parrafoConHover" href="formulario.html">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ancla parrafoConHover" href="ubicacion.html">ubicacion</a>
+              <li class="nav-item">
+                <a class="nav-link ancla parrafoConHover" href="ofertas.html">Ofertas Especiales</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      </nav>
         <!--<nav class="contenedorNav">
             <ul class="GridPadre">
                 <li class="item"><a href="../index.html">Inicio</a></li>
@@ -51,17 +54,143 @@
     </header>
 
     <main>
-        <h1>Nuestros Productos</h1>
-        <img src="../img/asd.jpg" alt="Imagen de productos">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/klVFReOfj1k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <!--  PRODUCTOS
+      <h1>Nuestros Productos</h1>
+        <div class="imagen1">
+          <img src="../img/nueces-de-pecan.webp" alt="Imagen de productos">
+        </div>  
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/klVFReOfj1k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        -->
+        <h1 data-aos="fade-right">Nuestros Productos</h1>
+        <section>
+            <div class="row">
+                <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2 imagen1">
+                    <div class="card">
+                        <img src="../img/nueces-de-pecan.webp" class="card-img-top" alt="Nueces Pecan">
+                        <div class="card-body">
+                            <h5 class="card-title">Nueces Pecan</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2 imagen1">
+                    <div class="card">
+                        <img src="../img/almendras.jpg" class="card-img-top" alt="Almendras">
+                        <div class="card-body">
+                            <h5 class="card-title">Almendras</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2 imagen1">
+                    <div class="card">
+                        <img src="../img/avellanas.webp" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Avellanas</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2 imagen1">
+                    <div class="card">
+                        <img src="../img/avellanas.webp" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Avellanas</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2 imagen1">
+                  <div class="card">
+                      <img src="../img/nueces-de-pecan.webp" class="card-img-top" alt="Nueces Pecan">
+                      <div class="card-body">
+                          <h5 class="card-title">Nueces Pecan</h5>
+                          <p class="card-text"></p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2 imagen1">
+                  <div class="card">
+                      <img src="../img/almendras.jpg" class="card-img-top" alt="Almendras">
+                      <div class="card-body">
+                          <h5 class="card-title">Almendras</h5>
+                          <p class="card-text"></p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2 imagen1">
+                  <div class="card">
+                      <img src="../img/avellanas.webp" class="card-img-top" alt="">
+                      <div class="card-body">
+                          <h5 class="card-title">Avellanas</h5>
+                          <p class="card-text"></p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2 imagen1">
+                  <div class="card">
+                      <img src="../img/avellanas.webp" class="card-img-top" alt="">
+                      <div class="card-body">
+                          <h5 class="card-title">Avellanas</h5>
+                          <p class="card-text"></p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2 imagen1">
+                <div class="card">
+                    <img src="../img/nueces-de-pecan.webp" class="card-img-top" alt="Nueces Pecan">
+                    <div class="card-body">
+                        <h5 class="card-title">Nueces Pecan</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2 imagen1">
+                <div class="card">
+                    <img src="../img/almendras.jpg" class="card-img-top" alt="Almendras">
+                    <div class="card-body">
+                        <h5 class="card-title">Almendras</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2 imagen1">
+                <div class="card">
+                    <img src="../img/avellanas.webp" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Avellanas</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-8 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 py-2 imagen1">
+                <div class="card">
+                    <img src="../img/avellanas.webp" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Avellanas</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
+      <div class="colorFondo">
         <p>Redes sociales</p>
         <p>Teléfono de Contacto</p>
         <p>Email</p>
         <p>todos los derechos <strong>reservados</strong></p>
-     </footer>
+      </div>
+    </footer>
 
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</body>
+
+     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    
+     <script>
+       AOS.init();
+     </script>
+
+  </body>
 </html>
