--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" 
-crossorigin="anonymous">    
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../img/asd.jpg" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/estilo.css">
+  <link rel="shortcut icon" href="../img/asd.jpg" type="image/x-icon">
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">SL Frutos Secos</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle 
-          navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <li class="item"><a href="../index.html">Inicio</a></li>
-                  </li>
-                  <li class="nav-item">
-                    <li class="item"><a href="formulario.html">Contacto</a></li>
-                  </li>
-                  <li class="nav-item">
-                    <li class="item"><a href="ubicacion.html">Ubicación</a></li>
-                  </li>
-                  <li class="nav-item">
-                    <li class="item"><a href="multimedia.html">Productos</a></li>
-                    <li class="nav-item">
-                        <li class="item"><a href="http://www.google.com" target="_blank">Google</a></li>   
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-          
-          <!--<nav class="contenedorNav">
+  <header>
+    <nav class="navbar navbar-expand-lg colorFondo">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img class="tamLogo" src="../logo/Logo.jpeg" alt="Logo SL"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active ancla parrafoConHover" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ancla parrafoConHover" href="multimedia.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ancla parrafoConHover" href="formulario.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ancla parrafoConHover" href="ubicacion.html">ubicacion</a>
+            <li class="nav-item">
+              <a class="nav-link ancla parrafoConHover" href="ofertas.html">Ofertas Especiales</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    </nav>
+
+    <!--<nav class="contenedorNav">
             <ul class="GridPadre">
                 <li class="item"><a href="../index.html">Inicio</a></li>
                 <li class="item"><a href="formulario.html">Contacto</a></li>
@@ -49,18 +53,31 @@ crossorigin="anonymous">
                 <li class="item"><a href="http://www.google.com" target="_blank">Google</a></li>
             </ul>
         </nav> -->
-    </header>
-    <main>
-        <h1>¡Ofertas Especiales!</h1>
-        <img class="img-fluid" src="../img/oferta.jpg" alt="Imagen de productos">
-    </main>
-    <footer>
-        <p>Redes sociales</p>
-        <p>Teléfono de Contacto</p>
-        <p>Email</p>
-        <p>todos los derechos <strong>reservados</strong></p>
-     </footer>
-     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  </header>
+  <main>
+    <h1 data-aos="fade-right">¡Ofertas Especiales!</h1>
+    <div class="imagen1">
+      <img class="img-fluid" src="../img/oferta.jpg" alt="Imagen de productos">
+    </div>
+  </main>
+  <footer>
+    <div class="colorFondo">
+      <p>Redes sociales</p>
+      <p>Teléfono de Contacto</p>
+      <p>Email</p>
+      <p>todos los derechos <strong>reservados</strong></p>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+
 </body>
+
 </html>
