--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -7,38 +7,40 @@
     <title>Ubicación</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" 
     crossorigin="anonymous">    
-    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/estilo.css">
     <link rel="shortcut icon" href="../img/asd.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">SL Frutos Secos</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle 
-          navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <li class="item"><a href="../index.html">Inicio</a></li>
-                  </li>
-                  <li class="nav-item">
-                    <li class="item"><a href="formulario.html">Contacto</a></li>
-                  </li>
-                  <li class="nav-item">
-                    <li class="item"><a href="multimedia.html">Productos</a></li>
-                  </li>
-                  <li class="nav-item">
-                    <li class="item"><a href="ofertas.html">Ofertas Especiales</a></li>
-                    <li class="nav-item">
-                        <li class="item"><a href="http://www.google.com" target="_blank">Google</a></li>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+      <nav class="navbar navbar-expand-lg colorFondo">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img class="tamLogo" src="../logo/Logo.jpeg" alt="Logo SL"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active ancla parrafoConHover" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ancla parrafoConHover" href="multimedia.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ancla parrafoConHover" href="formulario.html">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ancla parrafoConHover" href="ubicacion.html">ubicacion</a>
+              <li class="nav-item">
+                <a class="nav-link ancla parrafoConHover" href="ofertas.html">Ofertas Especiales</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      </nav>
         
         <!--<nav class="contenedorNav">
             <ul class="GridPadre">
@@ -51,17 +53,25 @@
         </nav> -->
     </header>
     <main>
-        <h1>Dónde Encontrarnos</h1>
+        <h1 data-aos="fade-right">Dónde Encontrarnos</h1>
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12411.635860053722!2d-68.05968624999998!3d-38.94890805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.    1!5e0!3m2!1ses-419!2sar!4v1656285687955!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
+      <div class="colorFondo">
         <p>Redes sociales</p>
         <p>Teléfono de Contacto</p>
         <p>Email</p>
         <p>todos los derechos <strong>reservados</strong></p>
+      </div>
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</body>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
+
+  </body>
 </html>
