cambios desafio sass 2 seo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Frutos secos de la mejor calidad con precios accesibles. Ciudad de Neuquén.">
+  <meta name="keywords" contenct="frutos secos, nueces, almendras, mani, avellanas, mix">
   <title>SL Frutos Secos</title>
   <link rel="shortcut icon" href="logo/Logo.jpeg" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -121,8 +123,8 @@
   
   
     <div class="colorFondo">
-      <h2 data-aos="fade-right">Productos Destacados</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisi
+      <h1 data-aos="fade-right">Productos Destacados</h1>
+        <p class="primerEstilo">Lorem ipsum dolor sit amet consectetur, adipisi
         asperiores voluptatum. Earum necessitatibus expedi
         earum ratione facilis? Iusto quasi ipsa, assumenda
         adipisicing elit. Nesciunt libero quam cumque repu
@@ -188,8 +190,8 @@
     <hr>
     <section>
       <div class="colorFondo">
-        <h3 class="unPoco">Un Poco de Nosotros</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo asperiores delectus voluptates amet tenetur ipsam
+        <h2 class="unPoco">Un Poco de Nosotros</h2>
+          <p class="segundoEstilo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo asperiores delectus voluptates amet tenetur ipsam
           similique! Est corrupti, reprehenderit ea officia, quia vitae aut optio tempora molestiae, unde aperiam
           expedita. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat nesciunt nemo cumque nam ipsum animi,
           doloribus perspiciatis eius enim exercitationem. Dolorem nemo unde ad sint voluptatibus, dolore a itaque
@@ -197,7 +199,7 @@
           quidem quaerat totam voluptatibus laborum magni quis laboriosam quo error eos commodi ex unde voluptatem.</p>
       </div>
         </section>
-    <br><br><br>
+  
   </main>
   <footer>
     <div class="colorFondo">
