--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Te compartimos nuestra ubicación por si queres retirar tus productos.">
     <title>Ubicación</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" 
     crossorigin="anonymous">    
@@ -53,7 +54,7 @@
         </nav> -->
     </header>
     <main>
-        <h1 data-aos="fade-right">Dónde Encontrarnos</h1>
+        <h1 data-aos="fade-right" class="primerEstilo">Dónde Encontrarnos</h1>
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12411.635860053722!2d-68.05968624999998!3d-38.94890805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.    1!5e0!3m2!1ses-419!2sar!4v1656285687955!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
